Change allteams page to show blurb about each team instead of events and actions

--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,7 @@ defaults:
     layout: team
     teamtag: 
     team-email: 
+    team-description:
 subtitle: 
 email: info@indivisiblehi.org
 baseurl: 
