Added logo field to site settings page

--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ subtitle: Democracy with Aloha
 email: info@indivisiblehi.org
 baseurl: 
 url: indivisiblehi.github.io
+logo:
 twitter_username: "@IndivisibleHI"
 facebook_username: Indivisible-Hawaii-102454510271701
 background-image: "/uploads/IB-May2017-flags.jpg"
