update email references to indivisiblehawaii.org

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ defaults:
     team-email: 
     team-description: 
 subtitle: Democracy with Aloha
-email: info@indivisiblehi.org
+email: info@indivisiblehawaii.org
 baseurl: 
 url: indivisiblehi.github.io
 logo: "/uploads/2019%20IH%20Sq%20sticker%20v9%20Ok-05c2b5.jpg"
