Add twitter feed to homepage

--- a/_config.yml
+++ b/_config.yml
@@ -95,6 +95,7 @@ baseurl:
 url: indivisiblehi.github.io
 logo: "/uploads/2019%20IH%20Sq%20sticker%20v9%20Ok-05c2b5.jpg"
 twitter_username: "@IndivisibleHI"
+twitter-embed: 
 facebook_username: Indivisible-Hawaii-102454510271701
 background-image: "/uploads/line%20background%20dark2.jpg"
 member-count: 2000+
