--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,7 @@ twitter-embed: <a class="twitter-timeline" data-height="500" href="https://twitt
   by IndivisibleHI</a> <script async src="https://platform.twitter.com/widgets.js"
   charset="utf-8"></script>
 facebook_username: Indivisible-Hawaii-102454510271701
+facebook_feed: <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FIndivisible-Hawaii-102454510271701&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=364621774216107" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 background-image: "/uploads/line%20background%20dark2.jpg"
 member-count: 2000+
 footer-title: Let's take action together.
