--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ address: |-
   1050 Queen St<br />
   Honolulu, Hawaii 96814
 baseurl: 
-url: indivisiblehi.github.io
+url: indivisiblehawaii.org
 logo: "/uploads/2019%20IH%20Sq%20sticker%20v9%20Ok.jpg"
 twitter_username: "@IndivisibleHI"
 twitter-embed: <a class="twitter-timeline" data-height="400" href="https://twitter.com/IndivisibleHI?ref_src=twsrc%5Etfw">Tweets
