Trying to fix facebook previews

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ subtitle: Democracy with Aloha
 email: info@indivisiblehawaii.org
 address: 
 baseurl: 
-url: indivisiblehawaii.org
+url: https://indivisiblehawaii.org
 logo: "/uploads/2019%20IH%20Sq%20sticker%20v9%20Ok.jpg"
 twitter_username: "@IndivisibleHI"
 twitter-embed: <a class="twitter-timeline" data-height="400" href="https://twitter.com/IndivisibleHI?ref_src=twsrc%5Etfw">Tweets
